fixed profile adding